Revision history for DBIx::Class

    * Notable Changes and Deprecations
        - DBIC::FilterColumn now properly bypasses \'' and \[] literals, just
          like the rest of DBIC

    * Fixes
        - Fix on_connect_* not always firing in some cases - a race condition
          existed between storage accessor setters and the determine_driver
          routines, triggering a connection before the set-cycle is finished
        - Fix multi-value literal populate not working with simplified bind
          specifications
        - Massively improve the implied resultset condition parsing - now all
          applicable conditions within a resultset should be properly picked
          up by create() and populate()
        - Ensure definitive condition extractor handles bizarre corner cases
          without bombing out (RT#93244)
        - Fix set_inflated_column incorrectly handling \[] literals (GH#44)
        - Ensure that setting a column to a literal invariably marks it dirty
        - Fix inability to handle multiple consecutive transactions with
          savepoints on DBD::SQLite < 1.39

    * Misc
        - Stop explicitly stringifying objects before passing them to DBI,
          instead assume that the DBI/DBD combo will take care of things

0.08270 2014-01-30 21:54 (PST)
    * Fixes
        - Fix 0.08260 regression in DBD::SQLite bound int handling. Inserted
          data was not affected, but any function <=> integer comparison would
          have failed (originally fixed way back in 0e773352)
        - Fix failure to load DateTime formatter when connecting to Firebird
          over ODBC

    * Misc
        - All drivers based on ::Storage::DBI::Firebird::Common now return the
          same sqlt_type value (affects ::DBI::Interbase, ::DBI::Firebird and
          ::DBI::ODBC::Firebird)

0.08260 2014-01-28 18:52 (UTC)
    * New Features
        - A new zero-to-DBIC style manual: DBIx::Class::Manual::QuickStart

    * Notable Changes and Deprecations